# snoot

./: Cargo.toml  readme.md  rustfmt.toml  test.rs
examples/: errors.rs  parsing.rs
src/: error.rs  lib.rs  parse.rs  sexpr.rs  token.rs
src/diagnostic/: diagnostic_bag.rs  mod.rs
src/error/: builder.rs  mod.rs
src/parse/: mod.rs  scopestack.rs  simplified_test.rs  test.rs
src/serde_serialization/: diagnostics.rs  mod.rs  notes.md  test.rs
