[package]
name = "snoot"
version = "0.1.2"
authors = ["Ty Overby <ty@pre-alpha.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/TyOverby/snoot"
description = "The best s-expression parser this side of the Mississippi!"

[dependencies]
tendril = "0.2.3"
regex = "0.2.1"
itertools = "0.5.9"

serde_json = "0.9.*"
serde_derive = "1.*.*"
serde = "1.*.*"

